2 commit without pull/merge

--- a/a.html
+++ b/a.html
@@ -1,4 +1,6 @@
 <module-one>
     Some stuff about module one.
     Wriiten directly onto the master branch.
+
+    Seeing what happpens when 2nd commit is made before the pull/merge.
 </module-one>
